# tickers-vis

./: .gitignore  README.md  docker-compose.yml  local.env
dash/: Dockerfile  app.py  layout.py  redis_helpers.py  requirements.txt  utils.py
producer/: producer.py  requirements.txt  utils.py
server/: logic.py  pyproject.toml  server.py  settings.py
tickers_plotter/: app.py  utils.py
ws_client/: Dockerfile  client.py  pyproject.toml  requirements.txt
ws_server/: Dockerfile  logic.py  server.py  utils.py
