[tool.poetry]
name = "ws_test"
version = "0.1.0"
description = ""
authors = ["lex <lex.quarkie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.3"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
