[tool.poetry]
name = "ws_client"
version = "0.1.0"
description = ""
authors = ["lex <lex.quarkie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "^3.4.3"
websockets = "^10.3"
dash = "^2.6.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
